terraform/modules/k8s/nginx-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-rules
  namespace: applications
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.org/client-max-body-size: "600m"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - DNS_NAME
    secretName: tls-secret
  rules:
  - host: DNS_NAME
    http:
      paths:
      - path:  /solr/(.*)
        pathType: Prefix
        backend:
          service:
            name: solr-service
            port:
              number: 8983
      - path: /nce/(.*)
        pathType: Prefix
        backend:
          service:
            name: nce-service
            port:
              number: 7000
      - path: /fa/(.*)
        pathType: Prefix
        backend:
          service:
            name: fa-service
            port:
              number:  9000
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: vue-service
            port:
              number: 3000
